[wip] Separate Java 8 and Java 11 parsers