@@ -36,16 +36,3 @@ tasks.withType<Javadoc> {
 
     exclude("**/JavaParser**")
 }
-
-tasks.named<JavaCompile>("compileJava") {
-    options.isFork = true
-    options.forkOptions.executable = "javac"
-    options.compilerArgs.addAll(listOf(
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-            "--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
-    ))
-}
